--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -1,10 +1,15 @@
 :root {
   /* 定义css全局变量 */
+  --c-bg: #1a1a1a;
 }
 
 html {
   font-family: Arial, Helvetica;
-  --uno: bg-slate-900;
+  --nuo: bg-#f5f5f5;
+}
+
+html.dark {
+  --uno: bg-[--c-bg];
 }
 
 ::selection {
