--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -1,16 +1,17 @@
 :root {
   /* 定义css全局变量 */
-  --c-bg: #1a1a1a;
   --lang-bg: #080b12;
+  --dark-bg: #1a1a1a;
+  --light-bg: #f5f5f5;
 }
 
 html {
   font-family: Arial, Helvetica;
-  background: #f5f5f5;
+  background: var(--light-bg);
 }
 
 html.dark {
-  background: var(--c-bg);
+  background: var(--dark-bg);
 }
 
 ::selection {
